--- a/_data/coaches.yml
+++ b/_data/coaches.yml
@@ -24,11 +24,11 @@
   link: "https://github.com/pietervdvn"
 
 - title: Marie De Vos
-  body: 
-  image: 
-  link: 
+  body: Marie is ontwerper met een voorliefde voor animatie. Ze draait via <a href='https://osoc.be/2019'>oSoc</a> al even mee in de Open Data community waar ze ook student coach was deze zomer.
+  image: jpg/marie.jpg
+  link: "hhttps://www.behance.net/mariedevos"
 
 - title: Thomas Dhooghe
-  body: 
-  image: 
-  link: 
+  body: Thomas baant al jaren zijn weg binnen de digitale innovatie. Hij werkte voor agencies, zette zijn eigen campingconcept op en werkt nu als opleidingscoördinator.
+  image: jpg/thomas.jpg
+  link: "https://unthinkable.be"
