changed copyright date

--- a/_config.yml
+++ b/_config.yml
@@ -33,10 +33,10 @@ social:
   twitter_username: nerdlab9000
   instagram_username: nerdlab9000
 legal:
-  year: '2018'
+  year: '2019'
   company: 'Nerdlab vzw'
   email: 'info@nerdlab.be'
-  address: 'Maïsstraat 181'
+  address: 'Katwilgenlaan 7a'
   city: '9000 Ghent'
   phone: '+32 486 22 72 02'
   btw: 'BE 0562.981.862'
