--- a/_data/coaches.yml
+++ b/_data/coaches.yml
@@ -32,3 +32,8 @@
   body: Thomas baant al jaren zijn weg binnen de digitale innovatie. Hij werkte voor agencies, zette zijn eigen campingconcept op en werkt nu als opleidingscoördinator.
   image: jpg/thomas.jpg
   link: "https://unthinkable.be"
+  
+- title: Michiel Leyman
+  body: Michiel is cityhacker van het eerste uur. Als winnaar van de 1e editie kon hij meteen terecht bij Open Knowledge Belgium waar hij als technical Grand Master de zaken in goede banen leidt.
+  image: jpg/michiel.jpg
+  link: "https://github.com/MichielLeyman"
