--- a/_data/coaches.yml
+++ b/_data/coaches.yml
@@ -37,3 +37,8 @@
   body: Michiel is cityhacker van het eerste uur. Als winnaar van de 1e editie kon hij meteen terecht bij Open Knowledge Belgium waar hij als technical Grand Master de zaken in goede banen leidt.
   image: jpg/michiel.jpg
   link: "https://github.com/MichielLeyman"
+
+- title: Astrid Sercu
+  body: Astrid is een gediplomeerd babbelaar. Ze zat ondertussen al drie edities aan het roer van de sociale media van oSoc.
+  image: jpg/astrid.jpg
+  link: "https://www.linkedin.com/in/astrid-sercu-359813136/"
