Added myself as a coach

--- a/_data/coaches.yml
+++ b/_data/coaches.yml
@@ -38,7 +38,7 @@
   image: jpg/michiel.jpg
   link: "https://github.com/MichielLeyman"
 
-- title: Astrid Sercu
-  body: Astrid is een gediplomeerd babbelaar. Ze zat ondertussen al drie edities aan het roer van de sociale media van oSoc.
-  image: jpg/astrid.jpg
-  link: "https://www.linkedin.com/in/astrid-sercu-359813136/"
+- title: Jens Pauwels
+  body: Jens is een software ontwikkelaar met een passie voor IoT. Tijdens de vorige editie van cityhacks kreeg hij het idee voor een chatbot te ontwikkelen die tot op de dag van vandaag zijn electronica thuis bediend.
+  image: jpg/jens.jpg
+  link: "https://github.com/jensPauwels"
