added astrid again

--- a/_data/coaches.yml
+++ b/_data/coaches.yml
@@ -42,3 +42,8 @@
   body: Jens is een software ontwikkelaar met een passie voor IoT. Tijdens de vorige editie van cityhacks kreeg hij het idee voor een chatbot te ontwikkelen die tot op de dag van vandaag zijn electronica thuis bediend.
   image: jpg/jens.jpg
   link: "https://github.com/jensPauwels"
+  
+- title: Astrid Sercu
+  body: Astrid is een gediplomeerd babbelaar. Ze zat ondertussen al drie edities aan het roer van de sociale media van oSoc.
+  image: jpg/astrid.jpg
+  link: "https://www.linkedin.com/in/astrid-sercu-359813136/"
