--- a/_data/coaches.yml
+++ b/_data/coaches.yml
@@ -26,7 +26,7 @@
 - title: Marie De Vos
   body: Marie is ontwerper met een voorliefde voor animatie. Ze draait via <a href='https://osoc.be/2019'>oSoc</a> al even mee in de Open Data community waar ze ook student coach was deze zomer.
   image: jpg/marie.jpg
-  link: "hhttps://www.behance.net/mariedevos"
+  link: "https://www.behance.net/mariedevos"
 
 - title: Thomas Dhooghe
   body: Thomas baant al jaren zijn weg binnen de digitale innovatie. Hij werkte voor agencies, zette zijn eigen campingconcept op en werkt nu als opleidingscoördinator.
