--- a/_data/coaches.yml
+++ b/_data/coaches.yml
@@ -22,3 +22,8 @@
   body: Astrid is een gediplomeerd babbelaar. Ze zat ondertussen al drie edities aan het roer van de sociale media van oSoc.
   image: jpg/astrid.jpg
   link: "https://www.linkedin.com/in/astrid-sercu-359813136/"
+  
+- title: Fré Dumazy
+  body: Fré heeft als mobile en all-around developer bij Duo heel wat kennis vergaard in verschillende projecten en weet zo de juiste technologieën te kiezen voor het juiste project.
+  image: jpg/fre.jpg
+  link: "https://www.duo.be/"
