--- a/_data/coaches.yml
+++ b/_data/coaches.yml
@@ -27,3 +27,8 @@
   body: Fré heeft als mobile en all-around developer bij Duo heel wat kennis vergaard in verschillende projecten en weet zo de juiste technologieën te kiezen voor het juiste project.
   image: jpg/fre.jpg
   link: "https://www.duo.be/"
+  
+- title: Carolina Droogendijk
+  body: Carolina bouwt mee aan digitale producten voor de cluster Cultuur bij stad Brugge. Ze zet hiervoor graag de gebruiker centraal en test, meet en verbetert tot deze tevreden is.
+  image: jpg/carolina.jpg
+  link: "https://be.linkedin.com/in/carolinadroogendijk"
