--- a/_data/coaches.yml
+++ b/_data/coaches.yml
@@ -32,3 +32,8 @@
   body: Carolina bouwt mee aan digitale producten voor de cluster Cultuur bij stad Brugge. Ze zet hiervoor graag de gebruiker centraal en test, meet en verbetert tot deze tevreden is.
   image: jpg/carolina.jpg
   link: "https://be.linkedin.com/in/carolinadroogendijk"
+  
+- title: Sabrina Poelvoorde
+  body: Sabrina brengt als voorzitter van <a href="http://www.brugit.be/">Brug-IT vzw</a> 20 jaar ervaring in digitalisatie mee en is naast zaakvoerder van <a href="http://mentoringsystems.be/diensten/">Mentoring Systems</a> ook blockchain-consultant bij <a href="http://trustandchain.be/home/">Trust and Chain</a>.
+  image: jpg/sabrina.jpg
+  link: "http://www.brugit.be/"
