--- a/_data/coaches.yml
+++ b/_data/coaches.yml
@@ -37,3 +37,8 @@
   body: Sabrina brengt als voorzitter van <a href="http://www.brugit.be/">Brug-IT vzw</a> 20 jaar ervaring in digitalisatie mee en is naast zaakvoerder van <a href="http://mentoringsystems.be/diensten/">Mentoring Systems</a> ook blockchain-consultant bij <a href="http://trustandchain.be/home/">Trust and Chain</a>.
   image: jpg/sabrina.jpg
   link: "http://www.brugit.be/"
+  
+- title: Benny Matthys 
+  body: Benny ontwikkelt software voor een betere dienstverlening bij de Stad Brugge. Digitaliseert en automatiseert de administratieve rompslomp.
+  image: jpg/benny.jpg
+  link: "http://www.brugge.be/"
