--- a/_data/coaches.yml
+++ b/_data/coaches.yml
@@ -42,3 +42,8 @@
   body: Benny ontwikkelt software voor een betere dienstverlening bij de Stad Brugge. Digitaliseert en automatiseert de administratieve rompslomp.
   image: jpg/benny.jpg
   link: "http://www.brugge.be/"
+  
+- title: Robin Leblon 
+  body: Robin is verantwoordelijk voor de R&D afdeling bij Citymesh, dat zich onder andere specialiseert in IoT toepassingen voor smart cities.
+  image: jpg/robin.jpg
+  link: "https://www.citymesh.com/"
