--- a/_data/coaches.yml
+++ b/_data/coaches.yml
@@ -37,3 +37,10 @@
   body: Robin is verantwoordelijk voor de R&D afdeling bij Citymesh, dat zich onder andere specialiseert in IoT toepassingen voor smart cities.
   image: jpg/robin.jpg
   link: "https://www.citymesh.com/"
+
+- title: Inti Valderas Caro 
+  body: Inti is een Masterstudent Interaction Design. Hij is intussen 4 jaar actief als freelance digital designer. Zijn focus is om tijdens alle interactieve projecten de gebruiker centraal te zetten.
+  image: jpg/inti.jpg
+  link: "https://valderas.be/"
+  
+  
